services/dev/argocd/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.global-static-ip-name: global-dev-argocd-ip
    networking.gke.io/managed-certificates: argocd-dev-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: http
    host: argocd-dev.clingen.app
  tls:
  - hosts:
    - argocd-dev.clingen.app
    secretName: argocd-secret # do not change, this is provided by Argo CD
